[workspace]
members = ["rust_http_proxy", "log_x", "io_x", "prom_label"]
resolver = "2"

[workspace.dependencies]
socket_filter = { git = "https://github.com/arloor/bpf_rs_hub.git" }
prometheus-client = "0.22"
pin-project-lite = "0.2"
tokio = { version = "1", features = ["full"] }
futures-util = "0.3"
