[workspace]
members = ["rust_http_proxy", "log_x", "io_x", "prom_label"]
resolver = "2"

[workspace.dependencies]
prometheus-client = "0.22"
pin-project-lite = "0.2"
log = "0.4"
tokio = { version = "1", features = ["full"] }
futures-util = "0.3"
flexi_logger = { version = "0.29", features = ["async"] }
