[workspace]
members = [
    "rust_http_proxy",
    "log_x",
    "io_x",
    "prom_label",
    "telegram-bot-send",
]
resolver = "2"

[workspace.package]
license = "LGPL-2.1-only OR BSD-2-Clause"

[workspace.dependencies]
prometheus-client = "0.24"
pin-project-lite = "0.2"
log = "0.4"
tokio = { version = "1", features = ["full"] }
futures-util = "0.3"
flexi_logger = { version = "0.31", features = ["async"] }
