[package]
name = "log_x"
version = "0.1.0"
authors = ["arloor <admin@arloor.com>"]
edition = "2021"
rust-version = "1.79.0"

[lib]
path = "src/lib.rs" # 库文件的路径

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
flexi_logger = { version = "0.28", features = ["async"] }
log.workspace = true
