[package]
name = "rust_http_proxy"
version = "0.1.5"
rust-version = "1.85.0"
edition = "2024"
license.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "rust_http_proxy"
path = "src/main.rs"

[[bin]]
name = "rust_http_proxy_service"
path = "src/winservice.rs"
required-features = ["winservice"]

[dependencies]
hyper = { version = "1", features = ["full"] }
tokio.workspace = true
http-body = "1.0"
http-body-util = "0.1"
hyper-util = { version = "0.1", features = ["tokio", "server-auto"] }
rustls-pemfile = "2"
tokio-rustls = { version = "0.26", features = [
    "logging",
    "tls12",
], default-features = false }
futures-util.workspace = true
log.workspace = true
rand = "0.9"
ipnetwork = "0.21"
tokio-util = "0.7"
mime_guess = "2.0"
httpdate = "1.0"
percent-encoding = "2.2"
chrono = "0.4"
pin-project-lite.workspace = true
prometheus-client.workspace = true
flate2 = { version = "1.0" }
async-compression = { version = "0.4", features = ["tokio", "gzip"] }
clap = { version = "4.4", features = ["derive"] }
base64 = "0.22"
jemallocator = { version = "0.5", optional = true }
mimalloc = { version = "0.1", optional = true }
regex = "1"
log_x = { path = "../log_x" }
io_x = { path = "../io_x" }
prom_label = { path = "../prom_label" }
hyper-rustls = { version = "0.27", default-features = false, features = [
    "rustls-platform-verifier",
    "http2",
    "native-tokio",
    "http1",
    "logging",
] }
http = "1"
lru_time_cache = "0.11"
toml = "0.9"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.132"
# axum-bootstrap = { git = "https://github.com/arloor/axum-bootstrap", branch = "master",default-features = false  }
axum-bootstrap = { version = "0.1", default-features = false }
tower = "0.5"
tower-service = "0.3"
tower-http = { version = "0.6", features = [
    "cors",
    "timeout",
    "trace",
    "compression-full",
] }
axum = "0.8"
askama = "0.15"
tracing = "0.1"
build-time = "0.1.3"
anyhow = "1"
serde_yaml_bw = "2.5.1"
futures = "0.3.31"
x509-cert = "0.2"

[target.'cfg(target_os = "linux")'.dependencies]
socket_filter = { version = "0.2", optional = true }
cgroup_traffic = { version = "0.2", optional = true }
pnet = { version = "0.35", optional = true }
axum-macros = "0.5"
axum-extra = { version = "0.12", features = ["typed-header"] }

[target.'cfg(target_os = "windows")'.dependencies]
windows-service = { version = "0.8", optional = true }

[features]
default = ["aws_lc_rs", "mimalloc"]
jemalloc = ["jemallocator"]
mimalloc = ["dep:mimalloc"]
bpf = ["socket_filter", "cgroup_traffic"]
bpf_vendored = ["bpf", "socket_filter/vendored", "cgroup_traffic/vendored"]
bpf_static = ["bpf", "socket_filter/static", "cgroup_traffic/static"]
aws_lc_rs = ["tokio-rustls/aws-lc-rs", "hyper-rustls/aws-lc-rs"]
ring = ["tokio-rustls/ring", "hyper-rustls/ring"]
winservice = ["windows-service"]
